--- a/WebVisualizations/style.css
+++ b/WebVisualizations/style.css
@@ -20,3 +20,14 @@ body {
 p {
     padding: 0 10px 0 10px;
 }
+
+table {
+    border-color: lightgray;
+}
+thead {
+    border-bottom: 2px solid black;
+    background-color: lightgray;
+}
+th {
+    padding: 5px 5px 5px 5px;
+}
