--- a/WebVisualizations/style.css
+++ b/WebVisualizations/style.css
@@ -8,6 +8,7 @@ h2 {
 }
 
 body {
+    padding-top: 40px;
     background-color: lightgray;
 }
 
@@ -26,8 +27,12 @@ table {
 }
 thead {
     border-bottom: 2px solid black;
-    background-color: lightgray;
+    background-color: #efefef;
 }
 th {
     padding: 5px 5px 5px 5px;
+}
+
+#responsive_img {
+    margin-left: 100px;
 }
