--- a/WebVisualizations/style.css
+++ b/WebVisualizations/style.css
@@ -7,6 +7,13 @@ h2 {
     padding: 20px;
 }
 
+h3 {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 32px;
+    font-weight: bold;
+    color: gray;  
+}
+
 body {
     padding-top: 40px;
     background-color: lightgray;
@@ -34,5 +41,6 @@ th {
 }
 
 #responsive_img {
-    margin-left: 100px;
+    max-width: 100%;
+    height: auto;
 }
